# nexus-planner-spark

./: .env  .env.example  .gitignore  ADMIN_TRANSLATION_SUMMARY.md  APP_STORE_METADATA.md  BACKEND_SETUP_COMPLETE.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  DEVELOPMENT.md  OVERNIGHT_WORK_SUMMARY.md  PWA_SETUP.md  QUICK_START_CHECKLIST.md  README.md  RENATUS_BACKEND_INTEGRATION.md  RENATUS_IMPLEMENTATION_SUMMARY.md  SUPABASE_SETUP.md  WORK_COMPLETION_REPORT.md  WORK_SUMMARY.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: build-desktop.yml  ci.yml
.lovable/: plan.md
android/: settings.gradle.kts
android/app/: build.gradle.kts
docs/: in-app-call-architecture.md  in-app-call-feature-plan.md  ios-testflight-guide.md  personalized-rag-protocol.md  presentation-script-thailand-2026.md  presentation-slide-brief.md  session-handoff-2026-07.md  smart-call-architecture.md  smart-call-phone-feature.md
public/: manifest.json  privacy.html  sw.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/did/: identity.rs  mod.rs  resolver.rs  signing.rs
src-tauri/src/phone/: call.rs  contacts.rs  mod.rs
src-tauri/src/rag/: db.rs  digest.rs  embedding.rs  ingest.rs  knowledge.rs  mod.rs  query.rs  seed.rs
src-tauri/src/sync/: delta.rs  encryption.rs  mod.rs  sync.rs
src/components/: ErrorBoundary.tsx
src/hooks/: use-mobile.tsx  useAdmin.ts  useAutoCheckIn.ts  useBrainBriefing.ts  useChatNotifications.ts  useCreativeRoles.ts  useInactivityDetector.ts  useIntersection.ts  useIsMobile.ts  useKeyboardViewport.ts  useTodoSync.ts  useTranslation.ts  useUserStatusRefresh.ts
src/lib/: colors.ts  format.ts  formatBrainMessage.ts  formatBrainMessage.tsx  i18n.ts  platform.ts  retry.ts  supabase.ts
src/mock/: adminData.ts  data.ts
src/pages/: AdminPage.tsx  AuthPage.tsx  (+12 more)
supabase/: config.toml  schema.sql  seed.sql
(+374 files in other folders)
